style.css
@font-face {
    font-family: roboto;
    src: url(assets/font/Roboto-VariableFont_wdth,wght.ttf);
}

:root{
    --light-blue: #1992d4;
    --light-gray: #e2e8f0;
    --dark-gray: #7c7c7c;
}

html, body{
    margin: 0px;
    padding: 0px;
}

p, h4, h5{
    font-family: "roboto", Arial, Helvetica, sans-serif;
}

.container{
    display: grid;
    grid-template-rows: 1fr, 5fr;
    grid-template-columns: 1fr, 6fr;
}

#header{
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    margin-left: 40px;
}

#upper-header{
    display: flex;
    justify-content: flex-start;
    margin-left: 20px;
    align-items: center;
}

#upper-right-header{
    display: flex;
    margin-left: 150px;
    gap: 15px;
}

#upper-left-header{
    display: flex;
    gap: 20px;
}

#search-icon, #notification-icon{
    width: 20px;
}

#profile-picture{
    align-self: center;
}

#lower-header{
    display: flex;
    flex-grow: 0;
    align-items: center;
}

#lower-left-header{
    display: flex;
}

#header-buttons{
    display: flex;
    margin-left: 500px;
    gap: 20px;
}

#bigprofilepicture{
    margin-left: 10px;
}

#sidebar{
    background-color: var(--light-blue);
    color: #ffffff;
    font-weight: 500;
    grid-row: 1 / 3;
    grid-column: 1 / 2;
}

#sidebar #lower-sidebar{
    margin-top: 40px;
}

#sidebar .sidebar-line{
    display: flex;
    justify-content: flex-start;
    gap: 20px;
    margin-left: 25px;
    margin-top: -10px;
}

#sidebar .dashbar-line{
    display: flex;
    margin-left: 15px;
    margin-top: -15px;
    margin-right: 90px;
}

#content{
    background-color: var(--light-gray);
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    box-shadow: 0px 4px 2px inset #bdbdbd;
    display: grid;
    grid-template-rows: 1fr, 3fr, 3fr;
    grid-template-columns: 2fr, 2fr, 1fr;
    padding-left: 20px;
}

#content .cards{
    grid-row: 2 / 4;
    grid-column: 1 / 3;
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    grid-template-columns: repeat(2, 1fr);
    width: 750px;
    gap: 30px;
}

#content .cards .card{
    background-color: #ffffff;
    border-left: 8px solid #ffa500;
    box-shadow: 0px -4px 3px -3px inset #a9a9a9; 
    border-radius: 10px;
    padding-top: 30px;
    padding-left: 20px;
    display: grid;
    grid-template-rows: 1fr, 1fr;
    grid-template-columns: 1fr;
}

#content .cards .card h4,
#content .cards .card p{
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

#content .cards .card h4{
    margin-top: -10px;
}

#content .cards .card img{
    grid-row: 2 / 3;
    grid-auto-columns: 1 / 2;
    justify-self: end;
    align-self: flex-end;
    margin-right: 30px;
    margin-bottom: 30px;
}

#content .dark-gray-text,
#content .announcements .dark-gray-text,
#content .trending .user .dark-gray-text{
    color: var(--dark-gray)
}

#content .announcements,
#content .trending #trending-users{
    background-color: white;
    margin-left: 30px;
    margin-right: 100px;
    border-radius: 10px;
    box-shadow: 0px -4px 3px -3px inset #a9a9a9; 
}

#content .announcements h4,
#content .announcements p{
    margin: 0px;
    padding: 0px;   
}

#content .announcements{
    padding-top: 20px;
    padding-right: 40px;
    padding-left: 40px;
}

#content .announcements .announcement{
    margin-bottom: 15px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    border-bottom: 2px solid var(--light-gray)
}

#content .announcements .announcement.announcement-no-border{
    border-bottom: none;
    margin-bottom: -265px;
}

#announcements-text,
#content .trending h4{
    margin-left: 30px;
}

#content .announcements{
    grid-row: 2 / 3;
    grid-column: 3 / 4;
}

#content .trending{
    grid-row: 3 / 4;
    grid-column: 3 / 4;
}

#content #projects-text{
    grid-row: 1 / 2;
    grid-column: 1 / 2;
}

#content #announcements-text{
    grid-row: 1 / 2;
    grid-column: 3 / 4;
}

#trending-users .user{
    display: flex;
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

#trending-users .user .trending-user-text p{
    margin-top: 7px;
    margin-bottom: 0px;
}


#trending-users .user img{
    align-self: center;
}

#header button{
    background-color: var(--light-blue);
    font-size: 15px;
    color: #ffffff;
    border: 0px;
    width: 100px;
    padding: 10px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 75px;
}

#profile-text, 
#greeting, 
#username,
#header button{
    font-weight: bold;
}

#greeting{
    font-size: 10px;
}

#username{
    font-size: 20px;
}

#searchbar{
    border: 0px;
    background-color: var(--light-gray);
    width: 700px;
    height: 20px;
    border-radius: 15px;
}

#dashboard-text{
    font-size: 25px;
    margin-bottom: 50px;
}

#view-dashboard{
    width: 40px;
    margin-right: 10px; 
    margin-top: -25px;
}

.sidebar-icon{
    width: 20px;
    filter: brightness(0) invert(1);
}

.star-icon, .view-icon, .share-icon{
    width: 20px;
}

.trending-profile-pictures{
    width: 80px;
}

